--- a/analyzers/EmlParser/requirements.txt
+++ b/analyzers/EmlParser/requirements.txt
@@ -1,7 +1,6 @@
-cortexutils>='2.1.0';python_version>='3.5'
+cortexutils>=2.1.0; python_version >= "3.5"
 eml_parser
 python-magic
-python-magic-debian-bin
 iocextract
 imgkit
 Pillow
