Update build.yml - amd64 runtime testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,7 +242,7 @@ jobs:
             org.opencontainers.image.url=https://thehive-project.org
             org.opencontainers.image.version=${{ env.VERSION }}
 
-      - name: Test imports in the container
+      - name: Test imports in the container (amd64)
         if: steps.check-rebuild.outputs.rebuild == 'true'
         run: |
           python <<EOF
@@ -324,6 +324,96 @@ jobs:
               sys.exit(1)
           EOF
 
+      - name: Test imports in the container (arm64)
+        if: steps.check-rebuild.outputs.rebuild == 'true'
+        run: |
+          python <<EOF
+          import subprocess
+          import sys
+          import textwrap
+          
+          image_tag = "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}"
+          command = "${{ env.COMMAND }}"
+          worker_name = "${{ matrix.directory }}"
+
+          print(f"🔍 Testing (arm64) Python imports in built image '{image_tag}' for worker '{worker_name}'...")
+
+          # in-container python snippet:
+          test_code = textwrap.dedent(f'''
+              import os, sys, re, os.path as osp
+
+              entrypoint_full = "{command}"
+              fallback_dir = "{worker_name}"
+
+              if "/" in entrypoint_full:
+                  dir_part = osp.dirname(entrypoint_full)
+                  file_part = osp.basename(entrypoint_full)
+                  # If directory doesn't exist but fallback_dir does, change to fallback.
+                  if not osp.isdir(dir_part) and osp.isdir(fallback_dir):
+                      dir_part = fallback_dir
+                  os.chdir(osp.join(os.getcwd(), dir_part))
+                  entrypoint = file_part
+              else:
+                  entrypoint = entrypoint_full
+
+              if not osp.exists(entrypoint):
+                  print("❌ ERROR: {{}} not found inside the container.".format(entrypoint))
+                  sys.exit(1)
+
+              with open(entrypoint, 'r', encoding='utf-8') as f:
+                  content = f.readlines()
+
+              imports = [line.strip() for line in content if re.match(r'^\\s*(import|from)\\s+[a-zA-Z0-9_.]+', line)]
+              print("🔍 Checking Python imports from", entrypoint)
+              for imp in imports:
+                  try:
+                      exec(imp)
+                      print("✅", imp, "- SUCCESS")
+                  except Exception as e:
+                      print("❌", imp, "- FAILED:", e)
+                      sys.exit(1)
+
+              print("✅ All imports tested successfully!")
+          ''')
+
+          try:
+              # Pull the arm64 variant explicitly
+              pull_result = subprocess.run(
+                  ["docker", "pull", "--platform", "linux/arm64", image_tag],
+                  capture_output=True,
+                  text=True
+              )
+              print(pull_result.stdout, file=sys.stdout)
+              print(pull_result.stderr, file=sys.stderr)
+
+              # Run the container with your python test code on arm64
+              result = subprocess.run(
+                  [
+                      "docker", "run", "--rm",
+                      "--platform", "linux/arm64",
+                      "--entrypoint", "python",
+                      image_tag,
+                      "-c", test_code
+                  ],
+                  capture_output=True,
+                  text=True
+              )
+              # Print the container's logs
+              print(result.stdout, file=sys.stdout)
+              print(result.stderr, file=sys.stderr)
+
+              if result.returncode != 0:
+                  warning_message = f"Import testing FAILED (arm64) for worker '{worker_name}' with exit code {result.returncode}"
+                  print("⚠️", warning_message)
+                  # GitHub Actions annotation for warning
+                  print(f"::warning::{warning_message}")
+              else:
+                  print("✅ Import testing succeeded (arm64)")
+
+          except Exception as e:
+              print("::warning::Error during import testing (arm64):", e)
+              sys.exit(1)
+          EOF
 
   build_responders:
     name: Build Responders
@@ -597,7 +687,97 @@ jobs:
               # to fail the entire job, do sys.exit(1)
               sys.exit(1)
           EOF
+          
+      - name: Test imports in the container (arm64)
+        if: steps.check-rebuild.outputs.rebuild == 'true'
+        run: |
+          python <<EOF
+          import subprocess
+          import sys
+          import textwrap
+          
+          image_tag = "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}"
+          command = "${{ env.COMMAND }}"
+          worker_name = "${{ matrix.directory }}"
 
+          print(f"🔍 Testing (arm64) Python imports in built image '{image_tag}' for worker '{worker_name}'...")
+
+          # in-container python snippet:
+          test_code = textwrap.dedent(f'''
+              import os, sys, re, os.path as osp
+
+              entrypoint_full = "{command}"
+              fallback_dir = "{worker_name}"
+
+              if "/" in entrypoint_full:
+                  dir_part = osp.dirname(entrypoint_full)
+                  file_part = osp.basename(entrypoint_full)
+                  # If directory doesn't exist but fallback_dir does, change to fallback.
+                  if not osp.isdir(dir_part) and osp.isdir(fallback_dir):
+                      dir_part = fallback_dir
+                  os.chdir(osp.join(os.getcwd(), dir_part))
+                  entrypoint = file_part
+              else:
+                  entrypoint = entrypoint_full
+
+              if not osp.exists(entrypoint):
+                  print("❌ ERROR: {{}} not found inside the container.".format(entrypoint))
+                  sys.exit(1)
+
+              with open(entrypoint, 'r', encoding='utf-8') as f:
+                  content = f.readlines()
+
+              imports = [line.strip() for line in content if re.match(r'^\\s*(import|from)\\s+[a-zA-Z0-9_.]+', line)]
+              print("🔍 Checking Python imports from", entrypoint)
+              for imp in imports:
+                  try:
+                      exec(imp)
+                      print("✅", imp, "- SUCCESS")
+                  except Exception as e:
+                      print("❌", imp, "- FAILED:", e)
+                      sys.exit(1)
+
+              print("✅ All imports tested successfully!")
+          ''')
+
+          try:
+              # Pull the arm64 variant explicitly
+              pull_result = subprocess.run(
+                  ["docker", "pull", "--platform", "linux/arm64", image_tag],
+                  capture_output=True,
+                  text=True
+              )
+              print(pull_result.stdout, file=sys.stdout)
+              print(pull_result.stderr, file=sys.stderr)
+
+              # Run the container with your python test code on arm64
+              result = subprocess.run(
+                  [
+                      "docker", "run", "--rm",
+                      "--platform", "linux/arm64",
+                      "--entrypoint", "python",
+                      image_tag,
+                      "-c", test_code
+                  ],
+                  capture_output=True,
+                  text=True
+              )
+              # Print the container's logs
+              print(result.stdout, file=sys.stdout)
+              print(result.stderr, file=sys.stderr)
+
+              if result.returncode != 0:
+                  warning_message = f"Import testing FAILED (arm64) for worker '{worker_name}' with exit code {result.returncode}"
+                  print("⚠️", warning_message)
+                  # GitHub Actions annotation for warning
+                  print(f"::warning::{warning_message}")
+              else:
+                  print("✅ Import testing succeeded (arm64)")
+
+          except Exception as e:
+              print("::warning::Error during import testing (arm64):", e)
+              sys.exit(1)
+          EOF
   
   build_catalog:
     name: Build Catalog
