--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,10 +196,14 @@ jobs:
       - name: Set Image Tag
         run: |
           if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
-            echo "IMAGE_TAGS=ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION }}" >> $GITHUB_ENV
-            echo "IMAGE_TAGS+=\\nghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION_SPLIT }}" >> $GITHUB_ENV
+            echo "IMAGE_TAGS<<EOF" >> $GITHUB_ENV
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION }}"
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION_SPLIT }}"
+            echo "EOF" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAGS=ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:devel" >> $GITHUB_ENV
+            echo "IMAGE_TAGS<<EOF" >> $GITHUB_ENV
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:devel"
+            echo "EOF" >> $GITHUB_ENV
           fi
       
       - name: Set Platforms
@@ -388,10 +392,14 @@ jobs:
       - name: Set Image Tag
         run: |
           if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
-            echo "IMAGE_TAGS=ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION }}" >> $GITHUB_ENV
-            echo "IMAGE_TAGS+=\\nghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION_SPLIT }}" >> $GITHUB_ENV
+            echo "IMAGE_TAGS<<EOF" >> $GITHUB_ENV
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION }}"
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.VERSION_SPLIT }}"
+            echo "EOF" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAGS=ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:devel" >> $GITHUB_ENV
+            echo "IMAGE_TAGS<<EOF" >> $GITHUB_ENV
+            echo "ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:devel"
+            echo "EOF" >> $GITHUB_ENV
           fi
       - name: Set Platforms
         id: set_platforms
